Avoiding overflow long titles.

--- a/src/components/weekActivities/weekActivities.css
+++ b/src/components/weekActivities/weekActivities.css
@@ -64,6 +64,7 @@
 @media all and (max-width: 700px) {
   .heading {
     font-size: 14px;
+    overflow: hidden;
   }
   
   .date, .data-metric{
